Bug 688226 - The garbager must check a pointer stability.
Summary: The garbager must check a pointer stability.
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: General (show other bugs)
Version: 0.00
Hardware: PC Windows XP
: P3 normal
Assignee: leonardo
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-07-21 00:56 UTC by Igor Melichev
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Igor Melichev 2005-07-21 00:56:09 UTC
The garbager must detect cases when a pointer points to a less stable space 
(from global to local, from stable to instable). We do have such problems (Bug 
688222, Bug 688140, Bug 688145), which are hard to diagnose without a special 
mechanizm.
Comment 1 leonardo 2005-10-12 03:48:33 UTC
Patch to HEAD :
http://ghostscript.com/pipermail/gs-cvs/2005-October/005765.html
The patch has been committed with a disabled stability check due to too many 
problems it detects.
Comment 2 leonardo 2005-10-12 04:21:34 UTC
One more patch to HEAD :
http://ghostscript.com/pipermail/gs-cvs/2005-October/005766.html